--- a/Projects/NPG_Practice_Projects/Net_3/Net_3.vcxproj.filters
+++ b/Projects/NPG_Practice_Projects/Net_3/Net_3.vcxproj.filters
@@ -18,5 +18,14 @@
     <ClCompile Include="3-1.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="3-2_IPAddr.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="3-3_IPandDomain.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="3- homework.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
