--- a/Projects/NPG_Practice_Projects/Project1/Project1.vcxproj.filters
+++ b/Projects/NPG_Practice_Projects/Project1/Project1.vcxproj.filters
@@ -15,13 +15,21 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="6-homework_MutithreadTCPServer.cpp">
+    <ClCompile Include="9-2_GUITCPSever.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="resource2.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
     <ClInclude Include="resource.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="Net_9-2_GUITCPServer.rc">
+      <Filter>리소스 파일</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
