--- a/Projects/NPG_Practice_Projects/Net_9-2_GUITCPServer/Net_9-2_GUITCPServer.vcxproj
+++ b/Projects/NPG_Practice_Projects/Net_9-2_GUITCPServer/Net_9-2_GUITCPServer.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{86d33926-e34c-4c3c-9fe1-541d42c0ba2b}</ProjectGuid>
-    <RootNamespace>Net6homeworkMutithreadTCPServer</RootNamespace>
+    <ProjectGuid>{cf7fdf15-d5ce-433c-9b4d-1d60f0e4b101}</ProjectGuid>
+    <RootNamespace>Net92GUITCPServer</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,10 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="6-homework_MutithreadTCPServer.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="resource.h" />
+    <ClCompile Include="9-2_GUITCPServer.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
